# server/docs/swagger.json
@@ -5,7 +5,7 @@
     "swagger": "2.0",
     "info": {
         "description": "Detailed info about all endpoints",
-        "title": "Ardo Backend API",
+        "title": "NOP API",
         "contact": {
             "name": "API Support",
             "url": "https://t.me/nassyrovich"
@@ -130,6 +130,60 @@
                         "description": "OK",
                         "schema": {
                             "$ref": "#/definitions/response.Success"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/response.Error"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/response.Error"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/application/export": {
+            "get": {
+                "security": [
+                    {
+                        "Bearer": []
+                    }
+                ],
+                "description": "Exports applications to an Excel file, optionally filtered by creation period",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/vnd.openxmlformats-officedocument.spreadsheetml.sheet"
+                ],
+                "tags": [
+                    "applications"
+                ],
+                "summary": "Export applications to Excel",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Period start (RFC3339)",
+                        "name": "from",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "Period end (RFC3339)",
+                        "name": "to",
+                        "in": "query"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "file"
                         }
                     },
                     "400": {
@@ -2644,6 +2698,44 @@
                 }
             }
         },
+        "/upload/enterprise-passport": {
+            "post": {
+                "description": "This can only be done by the logged-in user.",
+                "consumes": [
+                    "multipart/form-data"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Upload"
+                ],
+                "summary": "Uploads an enterprise passport",
+                "parameters": [
+                    {
+                        "type": "file",
+                        "description": "file to upload",
+                        "name": "data",
+                        "in": "formData",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/response.Success"
+                        }
+                    },
+                    "default": {
+                        "description": "",
+                        "schema": {
+                            "$ref": "#/definitions/response.Error"
+                        }
+                    }
+                }
+            }
+        },
         "/upload/product-image": {
             "post": {
                 "description": "This can only be done by the logged-in user.",
@@ -3005,6 +3097,9 @@
                 "authorizedCapitalComment": {
                     "type": "string"
                 },
+                "documentUrl": {
+                    "type": "string"
+                },
                 "equity": {
                     "type": "number"
                 },
@@ -3109,6 +3204,9 @@
                     "type": "number"
                 },
                 "authorizedCapitalComment": {
+                    "type": "string"
+                },
+                "documentUrl": {
                     "type": "string"
                 },
                 "equity": {
@@ -3347,6 +3445,9 @@
                     "type": "string"
                 },
                 "createdAt": {
+                    "type": "string"
+                },
+                "documentUrl": {
                     "type": "string"
                 },
                 "equity": {
